prevent taller navbar from covering content on mobile

--- a/static/global.css
+++ b/static/global.css
@@ -88,7 +88,7 @@ div.article-meta {
 
 .content {
     background: #fff;
-    margin: 12rem 0;
+    margin: 16rem 0;
     padding: 2rem;
 }
 
